# GTest4C

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  LICENSE  README.md
externC/: CMakeLists.txt  hash.cpp  hash.h  main.c
extern_C/: CMakeLists.txt  hash.cpp  hash.h  main.c
lib/logger/: logger.c  logger.h
mock/: logger_mock.cpp  logger_mock.hh  logger_mock.hpp  single.hh  single.hpp
src/: CMakeLists.txt  greeter.c  greeter.h  logger.c  logger.h  module_m.c
tests/: greeter_death_test.cpp  greeter_mock_test.cpp  greeter_param_test.cpp  greeter_test.cpp  greeter_test_fixture.cpp
